kubernetes/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meta-model-mongodb
  namespace: meta-model
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meta-model-mongodb
  template:
    metadata:
      labels:
        app: meta-model-mongodb
    spec:
      containers:
        - name: mongodb
          image: ghcr.io/lbggn/meta-model-mongodb:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: meta-model-mongodb-pvc
      imagePullSecrets:
        - name: regcred
