kubernetes/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: meta-model-mongodb-service
spec:
  selector:
    app: meta-model-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  type: ClusterIP
