kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meta-model-ingress
  namespace: meta-model
  annotations:
    kubernetes.io/ingress.class: "gce"  # Utilisez GCE comme contrôleur d'Ingress
    kubernetes.io/ingress.global-static-ip-name: "34.144.233.78"
spec:
  rules:
    - host: "meta.bggn.ch"  # Remplacez par votre domaine
      http:
        paths:
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: meta-model-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meta-model-frontend
                port:
                  number: 80
